--- a/gate-opener-api/package.json
+++ b/gate-opener-api/package.json
@@ -7,6 +7,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.40.2",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
