--- a/gate-opener-api/package.json
+++ b/gate-opener-api/package.json
@@ -1,21 +1,32 @@
 {
-  "private": true,
+  "name": "netlify-express",
+  "version": "0.0.1",
+  "description": "Example of how to deploy a Express.js Netlify app.",
+  "main": "functions/server.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "type-check": "tsc"
+    "build": "netlify-lambda build express",
+    "start": "nodemon server-local.js"
   },
-  "dependencies": {
-    "@netlify/plugin-nextjs": "^4.40.2",
-    "next": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/neverendingqs/netlify-express.git"
   },
+  "keywords": [
+    "netlify",
+    "express.js"
+  ],
+  "author": "neverendingqs",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/neverendingqs/netlify-express/issues"
+  },
+  "homepage": "https://github.com/neverendingqs/netlify-express#readme",
+  "dependencies": {},
   "devDependencies": {
-    "@types/node": "^12.20.55",
-    "@types/react": "^17.0.67",
-    "@types/react-dom": "^17.0.1",
-    "typescript": "^4.9.5"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "netlify-lambda": "^1.6.3",
+    "nodemon": "^1.19.2",
+    "serverless-http": "^2.3.0"
   }
 }
