change api to ws

--- a/gate-opener-device/platformio.ini
+++ b/gate-opener-device/platformio.ini
@@ -14,4 +14,6 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 board_build.partitions = huge_app.csv
-lib_deps = bblanchon/ArduinoJson@^6.21.3
+lib_deps = 
+	bblanchon/ArduinoJson@^6.21.3
+	hellerchr/ESP8266 Websocket Client@^1.0.2
