--- a/gate-opener-api/package.json
+++ b/gate-opener-api/package.json
@@ -2,18 +2,25 @@
   "name": "gate-opener-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "start": "node dist/app.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "express-ws": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.19",
+    "@types/express-ws": "^3.0.2",
+    "@types/node": "^20.8.4",
+    "concurrently": "^8.2.1",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
