--- a/gate_opener_app/android/app/src/main/AndroidManifest.xml
+++ b/gate_opener_app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
+        android:usesCleartextTraffic="true"
         android:label="gate_opener_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -30,4 +31,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 </manifest>
