update case & pcb, fix connection

--- a/gate-opener-device/platformio.ini
+++ b/gate-opener-device/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 board_build.partitions = huge_app.csv
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.3
+	madhephaestus/ESP32Servo@^1.1.0
